<resources>
    <string name="app_name">CalendarApp</string>
    <string name="create_a_task">Create a Task</string>
    <string name="task_name">Task Name</string>
    <string name="summary">Summary</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="remind">Remind</string>
    <string name="create_task">Create Task</string>
    <string name="task_list">List Task</string>
    <string name="no_task">You do not have any tasks today. Let\'s go create one</string>
</resources>
