<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="nhn.calendarapp.ui.CreateTaskActivity.Handler" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        tools:context="nhn.calendarapp.ui.CreateTaskActivity">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_xx_large"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/white_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/create_a_task"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/activity_vertical_margin" />

            <android.support.constraint.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/task_name"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/ed_task_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/task_name" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/summary"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/ed_task_name" />

            <EditText
                android:id="@+id/ed_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toStartOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_summary" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/date"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/ed_summary"
                tools:layout_editor_absoluteX="32dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/ed_summary" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <EditText
                android:id="@+id/ed_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                app:layout_constraintRight_toLeftOf="@+id/btn_date"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <ImageView
                android:id="@+id/btn_date"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/selectable_bg"
                android:onClick="@{()->handler.onDateClick()}"
                android:src="@drawable/ic_calendar"
                app:layout_constraintRight_toLeftOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@+id/date" />


            <EditText
                android:id="@+id/ed_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="time"
                app:layout_constraintEnd_toStartOf="@+id/time_btn"
                app:layout_constraintStart_toEndOf="@+id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <ImageView
                android:id="@+id/time_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/selectable_bg"
                android:onClick="@{()->handler.onTimeClick()}"
                android:src="@drawable/ic_access_time"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintLeft_toRightOf="@+id/ed_time"
                app:layout_constraintTop_toBottomOf="@+id/time" />


            <TextView
                android:id="@+id/remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/remind"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/ed_date" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@+id/ed_time" />

        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_create"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="@{()->handler.onFabCreateClick()}"
            android:src="@drawable/ic_check"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@id/card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card" />


    </android.support.constraint.ConstraintLayout>
</layout>